fixing the mobile spacing for the projects links

--- a/index.css
+++ b/index.css
@@ -259,6 +259,9 @@ p {
   .gallery-title {
     margin-top: 100px;
   }
+  a {
+    padding-right: 20px;
+  }
   .contact_section_planet_image {
     display: none;
   }
